Fix layout issues and separate login/member menu step1

--- a/src/main/webapp/resources/assets/css/common.css
+++ b/src/main/webapp/resources/assets/css/common.css
@@ -210,7 +210,7 @@ textarea {min-height: 170px;}
 .ux-button.contained.disabled {color: var(--fc-666);background-color: var(--contained-disabled);background-image: none;pointer-events: none;}
 .ux-button.contained.disabled:before {display: none;}
 
-/* signin dialog button */ 
+/* signin dialog button */
 .ux-button.social {justify-content: flex-start;}
 .ux-button.social .icon{width: 18px;height: 18px;}
 .ux-button.social .label{flex-grow: 1;text-align: center;}
@@ -287,7 +287,7 @@ header .user {display: flex;justify-content: flex-end;align-items: center;}
 header .user ul {display: flex; flex-wrap: wrap;align-items: center;gap: 24px; }
 header .user ul li {position: relative;}
 header .user ul li:first-of-type:not(:only-of-type):before {display: none}
-header .user ul li:before {position: absolute;top: 50%;left: -12px;width: 1px;height: 10px;background-color: rgba(255, 255, 255, .6);content: "";transform: translateY(-50%);}
+header .user ul li + li:before {position: absolute;top: 50%;left: -12px;width: 1px;height: 10px;background-color: rgba(255, 255, 255, .6);content: "";transform: translateY(-50%);}
 header .user .ux-button .label {font-weight: 700;}
 
 /* footer */
